# Physics-in-games

./: .gitignore  README.md
HW1/: CMakeLists.txt  main.c
HW2/: CMakeLists.txt  graph.emf  main.c  output.txt
HW3/: CMakeLists.txt  main.c  output.txt
HW4/: CMakeLists.txt  main.c
HW5/: CMakeLists.txt
HW6/: CMakeLists.txt  main.c
HW8/: CMakeLists.txt  main.c
